software-center (2.1.14.2) UNRELEASED; urgency=low

  [ Michael Vogt ]
  * merged lp:~mmcg069/software-center/small-things that cleans
    up no longer needed code in the carousel after mpts made 
    the background white
  * merged lp:~ilidrissi.amine/software-center/addons-provides and
    added test
  
  [ Lucian Adrian Grijincu ]
  * Alt-Left, Alt-Right work as Back/Forward like in all other GNOME apps
    (LP: #625745)

  [ Kiwinote ]
  * softwarecenter/apt/aptcache.py:
    - don't crash on encountering broken packages while getting deps
  
  [ Mohamed Amine IL Idrissi ]
  * softwarecenter/apt/aptcache.py: Packages that enhance a package that
    is provided by the main app are now add-ons (LP: #625252)

  [ Gary Lasker ]
  * softwarecenter/enums.py:
    - add missing CUSTOM_KEY_THUMBNAIL_URL value for software-center
      plugin to fix update-apt-xapian-index crash (LP: #626600)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 30 Aug 2010 11:19:38 +0200

software-center (2.1.14.1) maverick; urgency=low

  [ Gary Lasker ]
  * make the currency string not translatable, since it will not
    vary by locale currently (the agent always uses US$)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 26 Aug 2010 21:12:46 +0200

software-center (2.1.14) maverick; urgency=low

  [ Gary Lasker ]
  * softwarcenter/app.py:
    - fix incorrect state of install/remove menu items (LP: #624716)
  * softwarecenter/view/availablepane.py,
    softwarecenter/view/catview_gtk.py:
    - activate the appropriate install/remove menu item when
      selecting an app directly from in the Featured or What's
      New panels (LP: #624732) 
  * softwarecenter/backend/channel.py:
    - wire in icons for For Purchase, Independent and Other
      nodes in the left navigation pane (LP: #614213, LP: #614214,
      LP: #614215), many thanks to vish for pointers to suitable
      icons in the theme!
  * merge lp:~mpt/software-center/featured-and-whats-new-background,