@@ -6,6 +6,8 @@ software-center (2.1.14.2) UNRELEASED; urgency=low
     the background white
   * merged lp:~ilidrissi.amine/software-center/addons-provides and
     added test
+  * merged lp:~kelemeng/software-center/bug625859, this fixes 
+    UTF-8 character escapes (LP: #625859), many thanks!
   
   [ Lucian Adrian Grijincu ]
   * Alt-Left, Alt-Right work as Back/Forward like in all other GNOME apps
